<resources>
    <string name="app_name">View-study</string>
    <string name="view_study_1_1">自定义 View 1-1 绘制基础</string>
    <string name="view_study_1_2">自定义 View 1-2 Paint 详解</string>
    <string name="view_study_1_3">自定义 View 1-3 drawText() 文字的绘制</string>
    <string name="view_study_1_4">自定义 View 1-4 Canvas 对绘制的辅助</string>
    <string name="view_study_1_5">自定义 View 1-5 绘制顺序</string>
    <string name="view_study_1_6">自定义 View 1-6：属性动画 Property Animation（上手篇）</string>
    <string name="view_study_1_7">自定义 View 1-7：属性动画 Property Animation（进阶篇）</string>
    <string name="view_study_1_8">自定义 View 1-7：属性动画</string>
    <string name="title_draw_color">drawColor()</string>
    <string name="title_draw_circle">drawCircle()</string>
    <string name="title_draw_rect">drawRect()</string>
    <string name="title_draw_point">drawPoint()</string>
    <string name="title_draw_oval">drawOval()</string>
    <string name="title_draw_line">drawLine()</string>
    <string name="title_draw_round_rect">drawRoundRect()</string>
    <string name="title_draw_arc">drawArc()</string>
    <string name="title_draw_path">drawPath()</string>
    <string name="title_draw_histogram">直方图</string>
    <string name="title_draw_pie_chart">饼图</string>
    <string name="title_paint_one">paint_1</string>
    <string name="title_paint_two">paint_2</string>
    <string name="title_paint_three">paint_3</string>
    <string name="title_paint_four">paint_4</string>
    <string name="title_paint_five">paint_5</string>
    <string name="title_paint_six">paint_6</string>
    <string name="title_paint_seven">paint_7</string>
    <string name="image_size">尺寸：%1$d x %2$d</string>
    <string name="animate">动画</string>
</resources>