<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <Button
        android:id="@+id/btn_view_study_1_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/view_study_1_1" />

    <Button
        android:id="@+id/btn_view_study_1_2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/view_study_1_2" />

    <Button
        android:id="@+id/btn_view_study_1_3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/view_study_1_3" />

    <Button
        android:id="@+id/btn_view_study_1_4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/view_study_1_4" />

    <Button
        android:id="@+id/btn_view_study_1_5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/view_study_1_5" />

    <Button
        android:id="@+id/btn_view_study_1_6"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/view_study_1_6" />

</LinearLayout>